<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aria Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcomeMessage">Ingrese el codigo QR de su reserva</string>
    <string name="scanQR">Leer codigo QR</string>
    <string name="welcomeTitle">Bienvenido a su hotel</string>
    <string name="loading">Procesando...</string>

    <string name="welcome_menu">Bienvenido !</string>
    <string name="user_data">Mis datos</string>
    <string name="account_status">Estado de cuenta</string>
    <string name="restaurant_reservation">Nuestros restaurantes</string>
    <string name="wakeups_menu"></string>

    <string name="account_total">Total en su cuenta:</string>

    <string name="make_reservation_button">Haga una reserva</string>


</resources>