<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:id="@+id/tableLayout">


            <TableRow >

                <TextView
                        android:text="@string/welcomeTitle"
                        android:layout_width="wrap_content"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:textColor="#ffffff"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="false"
                        android:id="@+id/texto1"></TextView>



            </TableRow>

            <TableRow android:layout_marginTop="20dip" >

                <TextView android:text="@string/welcomeMessage"
                          android:layout_width="wrap_content"
                          android:textSize="23sp"
                          android:layout_weight="1"
                          android:gravity="center"
                          android:textColor="#ffffff"
                          android:layout_height="wrap_content"
                          android:id="@+id/texto2"></TextView>



            </TableRow>

            <TableRow android:gravity="center" android:layout_marginTop="100dip" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" >


                <Button
                        android:text="@string/scanQR"
                        android:clickable="true"
                        android:id="@+id/scan_button"
                        android:textColor="#ffffff"
                        android:background="#454545"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical|center_horizontal"
                        android:width="200dip"
                        android:height="50dip"></Button>
            </TableRow>

            <TableRow android:gravity="center" android:layout_marginTop="60dip" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" >


                <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBar"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_below="@+id/tableLayout"
                        android:layout_alignLeft="@+id/tableLayout"/>
            </TableRow>

            <TableRow android:gravity="center" android:layout_marginTop="10dip" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" >


                <TextView android:text="@string/loading"
                          android:layout_width="wrap_content"
                          android:textSize="18sp"
                          android:layout_weight="1"
                          android:gravity="center"
                          android:textColor="#ffffff"
                          android:layout_height="wrap_content"
                          android:id="@+id/texto3"></TextView>
            </TableRow>


        </TableLayout>



</RelativeLayout>