<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/home_container"
              android:layout_height="match_parent"
              android:layout_width="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background2"
              android:layout_gravity="center"
              android:gravity="top"
              android:paddingTop="30dip">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:id="@+id/table_list">

        <TableRow >

            <TextView android:text="@string/account_status"
                      android:layout_width="match_parent"
                      android:textSize="32sp"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:textColor="#FFFFFF"
                      android:layout_height="wrap_content"
                      android:id="@+id/account_status_title"></TextView>

        </TableRow>

        <TableRow android:layout_marginTop="15dip">
            <ExpandableListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/expandableListView"
                    android:background="#07000000"
                    android:childDivider="#cacaca"
                    android:dividerHeight="1dip"
                    android:drawSelectorOnTop="false"
                    android:divider="#454545"
                    android:minHeight="100dip"
                    android:layout_above="@+id/account_status_total"
                    android:layout_marginBottom="60dip"/>


        </TableRow>


    </TableLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:id="@+id/table_loading"
                 android:gravity="center_vertical|center_horizontal">

        <TableRow android:layout_marginTop="15dip"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:id="@+id/row_loading_1"
                  android:layout_gravity="center"
                  android:gravity="center_vertical|center_horizontal">
            <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_below="@+id/tableLayout"
                    android:layout_alignLeft="@+id/tableLayout"/>

        </TableRow>

        <TableRow android:layout_marginTop="10dip"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:id="@+id/row_loading_2"
                  android:gravity="center_vertical|center_horizontal">

            <TextView android:text="@string/loading"
                      android:layout_width="match_parent"
                      android:textSize="18sp"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:textColor="#ffffff"
                      android:layout_height="wrap_content"
                      android:id="@+id/loading_text"></TextView>

        </TableRow>


    </TableLayout>

    <TextView android:text="@string/account_total"
              android:layout_width="match_parent"
              android:textSize="25sp"
              android:layout_weight="1"
              android:textColor="#FFFFFF"
              android:layout_height="60dip"
              android:id="@+id/account_status_total"
              android:layout_alignParentBottom="true"
              android:background="#454545"
              android:gravity="center_vertical|left"
              android:paddingLeft="10dip"></TextView>

    <TextView android:text="$4500"
              android:layout_width="match_parent"
              android:textSize="25sp"
              android:layout_weight="1"
              android:textColor="#FFFFFF"
              android:layout_height="60dip"
              android:id="@+id/account_status_total_value"
              android:layout_alignParentBottom="true"
              android:background="#07000000"
              android:gravity="center_vertical|right"
              android:paddingRight="10dip"></TextView>
</RelativeLayout>
</FrameLayout>